[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binlookupapi"
version = "0.1.0"
description = "Python SDK for BINLookupAPI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "BINLookupAPI" }]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "respx>=0.21.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
